<resources>
    <string name="app_name">Avan</string>
    <string name="hint_name">name</string>
    <string name="face">Login With Facebook</string>
    <string name="MySubscribe">MySubscribe</string>
    <string name="SubScribe">SubScribe</string>
    <string name="UnSubScribe">UnSubScribe</string>
    <string name="user">User</string>
    <string name="Repair">Repair technician</string>
    <string name="admin_order">Admin order</string>
    <string name="warehouse_order">Warehouse order</string>
    <string name="Winch">Winch</string>
    <string name="personIdd">Personal ID</string>
    <string name="markets">Markets</string>
    <string name="passwordValied">Password Must Be More 5 digit</string>
    <string name="company">Companys</string>
    <string name="myCard">My Card</string>
    <string name="share">Share</string>
    <string name="contact">Contact :</string>
    <string name="orderMandop">Mandop</string>
    <string name="finishedOrders">Deleiverd Orders</string>
    <string name="numorders">Number of Orders</string>
    <string name="accuntBalance">Account Balance</string>
    <string name="confirm_mobile">Confirm Mobile Number</string>
    <string name="please_enter">Please enter code 6 digits which send by sms to your mobile</string>
    <string name="send_sms">We send SMS have verification code to your phone number</string>
    <string name="verify_account">Verify account</string>
    <string name="brand">Brand</string>
    <string name="arraive_address">Place of delivery</string>
    <string name="time_delivry">Time of delivery</string>
    <string name="pay_type">Pay type</string>
    <string name="comment">Add comment</string>
    <string name="visa">Visa</string>
    <string name="cash">Cash</string>
    <string name="add_new_address">Add new address</string>
    <string name="size">Size</string>
    <string name="thepackage">The package</string>
    <string name="waterType">Water type</string>
    <string name="successConfirm">Success</string>
    <string name="save">Save</string>
    <string name="hello">hello ...</string>
    <string name="about_us">About app</string>
    <string name="shop_sala">Shopping basket</string>
    <string name="enterCopoun">Enter copoun :</string>
    <string name="total">Total</string>
    <string name="copoun_offer">Copon offer</string>
    <string name="Shipping_tax">Shipping tax</string>
    <string name="final_total">Final total</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="track">Track</string>
    <string name="delete">Delete</string>
    <string name="language">App Language</string>
    <string name="copuon">Copon</string>
    <string name="addcopuon">Add Copon</string>
    <string name="editProfile">Edit Profile</string>
    <string name="fani">Repair technician Or Winch</string>
    <string name="SubScribeM">Monthly SubScribe</string>
    <string name="addressTitle">Please specify the addresses for the required service</string>
    <string name="autoAddress">Automatically determine current location</string>
    <string name="handAddress">Writing the site manually</string>
    <string name="Or">OR</string>
    <string name="Faddress">Full address</string>
    <string name="specialmarque">special marque</string>
    <string name="userName">customer name</string>
    <string name="requiredservice">The required service</string>
    <string name="Costofinspection">Cost of inspection</string>
    <string name="Chooseyourpaymentmethod">Choose your payment method</string>
    <string name="finishOrder">Finish order</string>
    <string name="Aaddress">Address :</string>
    <string name="specila">if you loking for a proudct and didnt found it !!! , Dont worry.
Send us product details and we will bring it for you. </string>
    <string name="ProuductName">Product Name</string>
    <string name="description">Description :</string>
    <string name="bankAccounts">Bank Accounts</string>
    <string name="upload">Upload images for your want Servcie </string>
    <string name="NewOrders">New Orders</string>
    <string name="bankpic">Upload the bank transfer picture</string>
    <string name="real">R.S. </string>
    <string name="MyOrders">My Orders</string>
    <string name="finish">I Accept the Order</string>
    <string name="Region">Region</string>
    <string name="more">more</string>
    <string name="detail">Order detail :</string>
    <string name="LocationFrom"> Location From</string>
    <string name="LocationTo"> Location To</string>
    <string name="chat">Chat</string>
    <string name="moreDetails">More details ....</string>
    <string name="numberOf"> Number Of pieces :</string>
    <string name="servcie">Offered service</string>
    <string name="carNumber">Car number</string>
    <string name="location">Location</string>
    <string name="directorder">Direct Order</string>
    <string name="carModel">Company name</string>
    <string name="RegesterCar">Regester Driver</string>
    <string name="RegisterServcie">Regisetr As Maintenance technician</string>
    <string name="carId">Drive ID</string>
    <string name="personId">Personal ID Forward</string>
    <string name="personIdback">Personal ID Back</string>
    <string name="imagead">Residence photo</string>
    <string name="carIdf">Drive ID Forward</string>
    <string name="carIdback">Drive ID Back</string>
    <string name="guest">Continue As A Guest</string>
    <string name="Register_Tager">Register As Fani</string>
    <string name="profile">My Profile</string>
    <string name="main">Main</string>
    <string name="Logout">LogOut</string>
    <string name="fatoura">receipt</string>
    <string name="receve"> Confirm Reservation</string>
    <string name="continuee">Continue</string>
    <string name="staff">Staff</string>
    <string name="info">Info</string>
    <string name="servcies">Servcies</string>
    <string name="Offers">Offer</string>
    <string name="EnterDetails">Enter Details :</string>
    <string name="accept">Accept </string>
    <string name="country">City</string>
    <string name="Ratethetechnician">Rate the technician</string>
    <string name="feedback">Add your feedback</string>
    <string name="Subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="men">men</string>
    <string name="women">women</string>
    <string name="hint_phone">mobile</string>
    <string name="salon">Healthy salons</string>
    <string name="sport">Sports clubs</string>
    <string name="wedding">Wedding halls</string>
    <string name="meeting">Hospitality services</string>
    <string name="whous">Who us</string>
    <string name="callus">Call us</string>
    <string name="details">You must transfer the amount to the previous account or pay when you buy. </string>
    <string name="myorders">My orders</string>
    <string name="ask">Are you sure you want to confirm and send this request?</string>
    <string name="addto">Add To Shopping Car</string>
    <string name="mobile">... Send a transfer receipt to WhatsApp: 971555733305 to complete your purchase</string>
    <string name="success">Your application registration has been successfully registered</string>
    <string name="load">Your request is being registered</string>
    <string name="lang">عربي</string>
    <string name="whoustxt"> It is an application for an e-commerce platform that allows UAE merchants to view and sell products. Our motto is always from home to home. </string>
    <string name="num_palce"> Building number </string>
    <string name="num_room"> Apartment number </string>
    <string name="place"> floor </string>
    <string name="address_type">address type</string>
    <string name="name">name</string>
    <string name="address">Email</string>
    <string name="phone">Phone</string>
    <string name="listorders">List Of Orders</string>
    <string name="confirm">Confirm</string>
    <string name="deletemontag">Delete Orders</string>
    <string name="login">Login</string>
    <string name="ignore">Skip</string>
    <string name="date">birth date </string>
    <string name="newpassword">New Password</string>
    <string name="code">Code</string>
    <string name="password">Password</string>
    <string name="allmoney">Cost</string>
    <string name="hint_address">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password </string>
    <string name="text_login">Login</string>
    <string name="text_register">Sign up ?</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="city">City</string>
    <string name="text_not_member">Registration</string>
    <string name="search">Search</string>
    <string name="orderdetail">Order Details</string>
    <string name="terms">Terms and Conditions</string>
    <string name="categorys">Categories</string>
    <string name="mostPopular">Most popular </string>
    <string name="track_ship">Track Shipment</string>
    <string name="enter_number_track">enter track num</string>
    <string name="cart">Add To Cart</string>
    <string name="address_details">address details</string>
    <string name="order_details">Order details</string>
    <string name="enter_here">Enter here to select address</string>
    <string name="number_track">track number</string>
    <string name="receipt_request">The receipt of the request</string>
    <string name="Shipment_progress">Shipment is in progress</string>
    <string name="request_delevried">The request has been delivered successfully</string>
    <string name="Congratulations">Congratulations</string>
    <string name="rate_us">Please rate your experience with us</string>
    <string name="rate_write">Write your suggestion</string>
    <string name="welcome">Welcome</string>
    <string name="request_done">Request Done Successfully</string>
    <string name="select_address">Select address</string>
    <string name="order_charge">Charge Order</string>
    <string name="myInformation">My Infrmation</string>
    <string name="notification">Notification</string>
    <string name="Current">Current</string>
    <string name="onging">Onging</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Previous">Previous</string>
    <string name="account_details">Account info</string>
    <string name="change_password">Change Password</string>
    <string name="social_media">Social media</string>
    <string name="see">Our vision</string>
    <string name="impo">Our mission</string>
    <string name="addresses">address</string>
    <string name="register">Register new account</string>
    <string name="first_name">first name</string>
    <string name="second_name">second name</string>
    <string name="national_id">national id</string>
    <string name="national_data">national date</string>
    <string name="national_photo">national photo</string>
</resources>