<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="820dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/logored" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/address"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/iconmetrolocation"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/addresses"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/feedback"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/iconioniciosstar1"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
           android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/social"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/noun_social_1809722"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
           android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/social_media"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/whous"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/noun_about_us_438975"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/whous"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/callus"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/noun_contact_us_829217"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/callus"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/see"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/iconawesomeexclamationcircle"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/see"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/impo"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/iconawesomeexclamationcircle"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/impo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/terms"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/iconawesomeexclamationcircle"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:id="@+id/logOut"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/backshapeemptyblue"
            android:layout_gravity="center"
            android:src="@drawable/iconopenaccountlogout"
            android:scaleType="fitXY"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            />
    </LinearLayout>

</LinearLayout>
